Fixed it now it works
das gud

--- a/species/SmolAvalibodyconfig.config
+++ b/species/SmolAvalibodyconfig.config
@@ -115,7 +115,7 @@
     "jumpInitialPercentage" : 1.0,
     "jumpHoldTime" : 0.0,
 
-    "multiJump" : true,
+    "multiJump" : false,
     "reJumpDelay" : 0.1,
     "autoJump" : false,
     "collisionCancelled" : true
