set5, set5b, and set5c

--- a/species/smolavalibodyconfig.config
+++ b/species/smolavalibodyconfig.config
@@ -40,9 +40,13 @@
   // back arm is calculated by adding this offset to the front arm values.
   "backArmOffset" : [3, 0],
 
+
+// I don't know what the mouth and feet offsets are supposed to do, but as I have found, they literally do nothing
   "mouthOffset" : [3, 3],
   "feetOffset" : [0, -10],
 
+
+// these armor offsets literally do nothing
   "headArmorOffset" : [0, 3],
   "chestArmorOffset" : [0, -2],
   "backArmorOffset" : [-6, -2],
