--- a/species/smolavalibodyconfig.config
+++ b/species/smolavalibodyconfig.config
@@ -4,14 +4,14 @@
   "globalOffset" : [0, 0.5],
 
   "headRunOffset" : [1, 1],
+  "headWalkOffset" : [2, 1],
   "headSwimOffset" : [1, 0],
 
-  // Offset for hair and chest when ducking
-  "duckOffset" : -12,
-  "headDuckOffset" : [1, 0],
   // Offset for hair and chest when running or falling
-  "jumpBob" : -8,
-  "runFallOffset" : -7,
+  "runFallOffset" : 1,
+  // Offset for hair and chest when ducking
+  "duckOffset" : -4,
+  "headDuckOffset" : [1, 0],
 
   "sitOffset" : 0,
   "layOffset" : -1,
@@ -25,9 +25,11 @@
   "armRunSeq" : [2, 1, 2, 3, 4, 5, 4, 3],
 
   // Used for bobbing hair, chest armor, and center of rotation.
-  "walkBob" : [-7, -6, -7, -8, -7, -6, -7, -8],
-  "runBob" : [-1, 0, -1, -2, -1, 0, -1, -2], // y values for headRunOffset and runFallOffset are added to this
-  "swimBob" : [8, 7, 6, 0, 0, 0, 0],
+  "walkBob" : [-1, 0, -1, -2, -1, 0, -1, -2],
+  "runBob" : [-1, 0, -1, -2, -1, 0, -1, -2],
+  "jumpBob" : 0,
+
+  "swimBob" : [0, -1, -2, -1, 0, 0, 0],
 
   "frontArmRotationCenter" : [-1, -1],
   "backArmRotationCenter" : [-1, -1],
@@ -40,13 +42,13 @@
 
 
 // I don't know what the mouth and feet offsets are supposed to do, but as I have found, they literally do nothing
-  "mouthOffset" : [3, -5],
-  "feetOffset" : [0, -20],
+  "mouthOffset" : [3, 3],
+  "feetOffset" : [0, -10],
 
 
 // these armor offsets literally do nothing
   "headArmorOffset" : [0, 3],
-  "chestArmorOffset" : [0, -10],
+  "chestArmorOffset" : [0, -2],
   "backArmorOffset" : [-6, -2],
   "legsArmorOffset" : [0, -12],
 
@@ -89,21 +91,12 @@
   },
 
   "personalities" : [
-    [ "idle.1", "idle.1", [0, -8], [0, -8] ], //standard
-    [ "idle.2", "idle.2", [0, -8], [0, -8] ], //confident
-    [ "idle.3", "idle.3", [0, -8], [0, -8] ], //gunslinger
-    [ "idle.4", "idle.4", [0, -8], [0, -8] ], //heroic
-    [ "idle.5", "idle.5", [0, -8], [0, -8] ], //scared
-    [ "idle.2", "idle.5", [0, -8], [0, -8] ], //wonderful
-    [ "idle.4", "idle.3", [0, -8], [0, -8] ], //prepared
-    [ "idle.5", "idle.2", [0, -8], [0, -8] ], //fabulous
-    [ "idle.4", "idle.1", [0, -8], [0, -8] ], //stoic
-    [ "idle.5", "idle.3", [0, -8], [0, -8] ] //nervous
+    [ "idle.1", "idle.1", [0, 0], [0, 0] ] //standard
   ],
 
   "movementParameters" : {
-    "standingPoly" : [ [-0.45, -2.0], [-0.15, -2.5], [0.15, -2.5], [0.45, -2.0], [0.45, -0.5], [0.15, -0.1], [-0.15, -0.1], [-0.45, -0.5] ],
-    "crouchingPoly" : [ [-0.45, -2.0], [-0.15, -2.5], [0.15, -2.5], [0.45, -2.0], [0.45, -1], [0.15, -0.55], [-0.15, -0.55], [-0.45, -1] ],
+    "standingPoly" : [ [-0.45, -1.0], [-0.15, -1.5], [0.15, -1.5], [0.45, -1.0], [0.45, 0.5], [0.15, 0.9], [-0.15, 0.9], [-0.45, 0.5] ],
+    "crouchingPoly" : [ [-0.45, -1.0], [-0.15, -1.5], [0.15, -1.5], [0.45, -1.0], [0.45, 0], [0.15, 0.45], [-0.15, 0.45], [-0.45, 0] ],
     "mass" : 1.2,
   "speedLimit" : 400,
 
