--- a/species/smolavalibodyconfig.config
+++ b/species/smolavalibodyconfig.config
@@ -90,7 +90,16 @@
   },
 
   "personalities" : [
-    [ "idle.1", "idle.1", [0, 0], [0, 0] ] //standard
+    [ "idle.1", "idle.1", [0, 0], [0, 0] ], //standard
+    [ "idle.2", "idle.2", [0, 0], [0, 0] ], //confident
+    [ "idle.3", "idle.3", [0, 0], [0, 0] ], //gunslinger
+    [ "idle.4", "idle.4", [0, 0], [0, 0] ], //heroic
+    [ "idle.5", "idle.5", [0, 0], [0, 0] ], //scared
+    [ "idle.2", "idle.5", [0, 0], [0, 0] ], //wonderful
+    [ "idle.4", "idle.3", [0, 0], [0, 0] ], //prepared
+    [ "idle.5", "idle.2", [0, 0], [0, 0] ], //fabulous
+    [ "idle.4", "idle.1", [0, 0], [0, 0] ], //stoic
+    [ "idle.5", "idle.3", [0, 0], [0, 0] ] //nervous
   ],
 
   "movementParameters" : {
